-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 6.2.0-rc2
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
v6.2
-
QO 2022-11-28, QO 2022-12-12
-
137
-
None
-
None
-
None
-
None
-
None
-
None
-
None
[j5:c:prim] | 2022-11-15T17:57:43.125+00:00 F ASSERT 23079 [conn26] "Invariant failure","attr":
{"expr":"request->recursiveCount > 0","file":"src/mongo/db/concurrency/lock_manager.cpp","line":539}mongo::LockerImpl::_lockBegin(mongo::OperationContext*, mongo::ResourceId, mongo::LockMode) mongo::LockerImpl::lock(mongo::OperationContext*, mongo::ResourceId, mongo::LockMode, mongo::Date_t) mongo::Lock::ResourceLock::_lock(mongo::LockMode, mongo::Date_t) mongo::telemetry::getTelemetryStoreForRead(mongo::ServiceContext const*) mongo::telemetry::(anonymous namespace)::LockedMetrics::get(mongo::OperationContext const*, mongo::BSONObj const&) mongo::telemetry::recordExecution(mongo::OperationContext const*, mongo::OpDebug const&, bool) mongo::(anonymous namespace)::FindCmd::Invocation::run(mongo::OperationContext*, mongo::rpc::ReplyBuilderInterface*)
- causes
-
SERVER-71592 $telemetry stage implementation should not spawn a thread
-
- Closed
-