SERVER-71390 locking fix