src/mongo/db/pipeline/document_source_telemetry.cpp
@@ -80,14 +80,12 @@ Value DocumentSourceTelemetry::serialize(boost::optional<ExplainOptions::Verbosi
 }
 
 void DocumentSourceTelemetry::buildTelemetryStoreIterator() {
-    TelemetryStore* telemetryStore = [&]() {
-        return getTelemetryStoreForRead(getContext()->opCtx->getServiceContext()).first;
-    }();
+    auto&& sharedTelemetryStore = [&]() { return getTelemetryStoreForRead(getContext()->opCtx); }();
 
     // Here we start a new thread which runs until the document source finishes iterating the
     // telemetry store.
-    stdx::thread producer([&, telemetryStore] {
-        telemetryStore->forEachPartition(
+    stdx::thread producer([&, sharedTelemetryStore = std::move(sharedTelemetryStore)] {
+        sharedTelemetryStore->forEachPartition(
             [&](const std::function<TelemetryStore::Partition()>& getPartition) {
                 // Block here waiting for the queue to be empty. Locking the partition will block
                 // telemetry writers. We want to delay lock acquisition as long as possible.
